--- a/_config.yml
+++ b/_config.yml
@@ -6,12 +6,12 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: Edit _config.yml to set your title!
-description: This is where the description of your site will go. You should change it by editing the _config.yml file. It can be as long as you like! Happy blogging... ❤
-github_username: jph00
+title: Uri Promentilla's Logbook
+description: This logbook includes my learning logs. 
+github_username: uripromentilla
 
 # Email and twitter are optional:
-email: 
+email: saniuri100@gmail.com
 twitter_username: 
 
 # OPTIONAL: override baseurl and url if using a custom domain
@@ -19,7 +19,7 @@ twitter_username:
 #baseurl: the subpath of your site, e.g. /blog
 
 # Set this to true to get LaTeX math equation support
-use_math: 
+use_math: True
 
 # Add your Google Analytics ID here if you have one and want to use it
 google_analytics:
