--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 # https://learnxinyminutes.com/docs/yaml/
 
 title: Uri Promentilla's Logbook
-description: This is Uri Promentilla's logbook. This includes my learning logs. The purpose of this website is to explain what I learned and thought of. 
+description: This is Uri Promentilla's logbook.
 github_username: uripromentilla
 
 # Email and twitter are optional:
